--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To do List</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    // html structure for to do List
-    
+    <nav>
+        <h1>To do List</h1>
+        <button id="toggle"></button>
+    </nav>
+
+    <hr>
+
+    <main>
+        <div class="input">
+            <input id="input" type="text">
+            <button id="add">Add</button>
+        </div>
+    </main>
+    <hr>
+    <div id="todo-list"></div>
+    <script src="script.js"></script>
 </body>
 </html>
